--- a/cloes_ai.ipynb
+++ b/cloes_ai.ipynb
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 79,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -148,6 +148,7 @@
         "\n",
         "client = Groq(api_key=api_key)\n",
         "\n",
+        "\n",
         "# ----------------------------\n",
         "# CREATE RETAIL DATASET\n",
         "# ----------------------------\n",
@@ -155,36 +156,168 @@
         "def create_dataset():\n",
         "    data = {\n",
         "        \"ProductName\": [\n",
+        "            # Electronics\n",
         "            \"Wireless Mouse\", \"Gaming Keyboard\", \"USB-C Charger\", \"Bluetooth Speaker\", \"LED Monitor\",\n",
-        "            \"Smartwatch\", \"Noise Cancelling Headphones\", \"External Hard Drive\", \"Laptop Stand\", \"Webcam\",\n",
-        "            \"Office Chair\", \"Desk Lamp\", \"Portable Fan\", \"Power Bank\", \"HDMI Cable\",\n",
-        "            \"Phone Tripod\", \"Smart Light Bulb\", \"Wireless Earbuds\", \"Mechanical Keyboard\", \"Microphone\",\n",
-        "            \"Notebook\", \"Pen Set\", \"Coffee Mug\", \"Planner\", \"Table Clock\",\n",
-        "            \"Wall Calendar\", \"Candle - Lavender\", \"Candle - Vanilla\", \"Candle - Rose\", \"Candle - Sandalwood\"\n",
+        "            \"Smartwatch\", \"Noise Cancelling Headphones\", \"External Hard Drive\", \"Webcam\", \"Power Bank\",\n",
+        "            \"HDMI Cable\", \"Wireless Earbuds\", \"Mechanical Keyboard\", \"USB Microphone\", \"Phone Charger\",\n",
+        "            \"Tablet Stand\", \"Smart Watch Band\", \"Screen Protector\", \"Phone Case\", \"Memory Card 64GB\",\n",
+        "            \n",
+        "            # Furniture\n",
+        "            \"Office Chair\", \"Laptop Stand\", \"Desk Organizer\", \"Bookshelf\", \"Computer Desk\",\n",
+        "            \"Ergonomic Cushion\", \"Monitor Stand\", \"Filing Cabinet\", \"Footrest\", \"Side Table\",\n",
+        "            \n",
+        "            # Home Decor\n",
+        "            \"Desk Lamp\", \"Smart Light Bulb\", \"Table Clock\", \"Wall Calendar\", \"Photo Frame\",\n",
+        "            \"Wall Art\", \"Decorative Vase\", \"Throw Pillow\", \"Area Rug\", \"Curtains\",\n",
+        "            \"Candle - Lavender\", \"Candle - Vanilla\", \"Candle - Rose\", \"Candle - Sandalwood\", \"Wall Mirror\",\n",
+        "            \n",
+        "            # Home Appliances\n",
+        "            \"Portable Fan\", \"Electric Kettle\", \"Air Purifier\", \"Humidifier\", \"Desk Heater\",\n",
+        "            \"Vacuum Cleaner\", \"Iron\", \"Hair Dryer\", \"Blender\", \"Toaster\",\n",
+        "            \n",
+        "            # Stationery\n",
+        "            \"Notebook\", \"Pen Set\", \"Planner\", \"Sticky Notes\", \"Highlighters Set\",\n",
+        "            \"Pencil Case\", \"Stapler\", \"Paper Clips Box\", \"Binder Set\", \"Desk Calendar\",\n",
+        "            \"Marker Set\", \"Scissors\", \"Tape Dispenser\", \"Ruler Set\", \"Eraser Pack\",\n",
+        "            \n",
+        "            # Kitchenware\n",
+        "            \"Coffee Mug\", \"Water Bottle\", \"Lunch Box\", \"Cutlery Set\", \"Ceramic Bowl Set\",\n",
+        "            \"Glass Set\", \"Kitchen Scale\", \"Cutting Board\", \"Mixing Bowl\", \"Storage Container Set\",\n",
+        "            \n",
+        "            # Accessories\n",
+        "            \"Phone Tripod\", \"Laptop Bag\", \"Cable Organizer\", \"PopSocket\", \"Keyboard Cover\",\n",
+        "            \"Mouse Pad\", \"Webcam Cover\", \"Card Holder\", \"Key Organizer\", \"Sunglasses\",\n",
+        "            \n",
+        "            # Sports & Fitness\n",
+        "            \"Yoga Mat\", \"Resistance Bands\", \"Water Bottle - Sports\", \"Jump Rope\", \"Dumbbells 2kg\",\n",
+        "            \"Gym Bag\", \"Sweat Towel\", \"Fitness Tracker\", \"Foam Roller\", \"Exercise Ball\",\n",
+        "            \n",
+        "            # Personal Care\n",
+        "            \"Hand Sanitizer\", \"Face Mask Pack\", \"Moisturizer\", \"Lip Balm\", \"Sunscreen SPF 50\",\n",
+        "            \"Soap Bar Set\", \"Shampoo\", \"Body Lotion\", \"Deodorant\", \"Toothbrush Set\"\n",
         "        ],\n",
         "        \"Category\": [\n",
+        "            # Electronics (20)\n",
         "            \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\",\n",
-        "            \"Electronics\", \"Electronics\", \"Electronics\", \"Accessories\", \"Electronics\",\n",
-        "            \"Furniture\", \"Home Decor\", \"Home Appliances\", \"Electronics\", \"Accessories\",\n",
-        "            \"Accessories\", \"Home Decor\", \"Electronics\", \"Electronics\", \"Electronics\",\n",
-        "            \"Stationery\", \"Stationery\", \"Kitchenware\", \"Stationery\", \"Home Decor\",\n",
-        "            \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\"\n",
+        "            \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\",\n",
+        "            \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\",\n",
+        "            \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\", \"Electronics\",\n",
+        "            \n",
+        "            # Furniture (10)\n",
+        "            \"Furniture\", \"Furniture\", \"Furniture\", \"Furniture\", \"Furniture\",\n",
+        "            \"Furniture\", \"Furniture\", \"Furniture\", \"Furniture\", \"Furniture\",\n",
+        "            \n",
+        "            # Home Decor (15)\n",
+        "            \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\",\n",
+        "            \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\",\n",
+        "            \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\", \"Home Decor\",\n",
+        "            \n",
+        "            # Home Appliances (10)\n",
+        "            \"Home Appliances\", \"Home Appliances\", \"Home Appliances\", \"Home Appliances\", \"Home Appliances\",\n",
+        "            \"Home Appliances\", \"Home Appliances\", \"Home Appliances\", \"Home Appliances\", \"Home Appliances\",\n",
+        "            \n",
+        "            # Stationery (15)\n",
+        "            \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\",\n",
+        "            \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\",\n",
+        "            \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\", \"Stationery\",\n",
+        "            \n",
+        "            # Kitchenware (10)\n",
+        "            \"Kitchenware\", \"Kitchenware\", \"Kitchenware\", \"Kitchenware\", \"Kitchenware\",\n",
+        "            \"Kitchenware\", \"Kitchenware\", \"Kitchenware\", \"Kitchenware\", \"Kitchenware\",\n",
+        "            \n",
+        "            # Accessories (10)\n",
+        "            \"Accessories\", \"Accessories\", \"Accessories\", \"Accessories\", \"Accessories\",\n",
+        "            \"Accessories\", \"Accessories\", \"Accessories\", \"Accessories\", \"Accessories\",\n",
+        "            \n",
+        "            # Sports & Fitness (10)\n",
+        "            \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\",\n",
+        "            \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\", \"Sports & Fitness\",\n",
+        "            \n",
+        "            # Personal Care (10)\n",
+        "            \"Personal Care\", \"Personal Care\", \"Personal Care\", \"Personal Care\", \"Personal Care\",\n",
+        "            \"Personal Care\", \"Personal Care\", \"Personal Care\", \"Personal Care\", \"Personal Care\"\n",
         "        ],\n",
         "        \"Price\": [\n",
-        "            1500, 3500, 1800, 2500, 22000,\n",
-        "            12000, 18000, 9000, 2500, 4000,\n",
-        "            15000, 3000, 2000, 3000, 800,\n",
-        "            1000, 1500, 8000, 7000, 4500,\n",
-        "            200, 500, 700, 1000, 1500,\n",
-        "            1000, 1200, 1300, 1100, 1400\n",
+        "            # Electronics (20)\n",
+        "            15.99, 49.99, 12.99, 29.99, 199.99,\n",
+        "            149.99, 89.99, 79.99, 49.99, 24.99,\n",
+        "            8.99, 59.99, 89.99, 39.99, 9.99,\n",
+        "            14.99, 12.99, 4.99, 8.99, 19.99,\n",
+        "            \n",
+        "            # Furniture (10)\n",
+        "            189.99, 29.99, 15.99, 119.99, 249.99,\n",
+        "            24.99, 19.99, 149.99, 16.99, 79.99,\n",
+        "            \n",
+        "            # Home Decor (15)\n",
+        "            34.99, 15.99, 19.99, 12.99, 9.99,\n",
+        "            29.99, 18.99, 14.99, 89.99, 59.99,\n",
+        "            12.99, 13.99, 12.49, 14.99, 39.99,\n",
+        "            \n",
+        "            # Home Appliances (10)\n",
+        "            22.99, 39.99, 129.99, 59.99, 49.99,\n",
+        "            249.99, 59.99, 34.99, 89.99, 54.99,\n",
+        "            \n",
+        "            # Stationery (15)\n",
+        "            3.99, 8.99, 12.99, 2.49, 4.99,\n",
+        "            6.99, 3.99, 1.99, 12.99, 5.99,\n",
+        "            7.99, 3.49, 4.99, 3.99, 2.49,\n",
+        "            \n",
+        "            # Kitchenware (10)\n",
+        "            9.99, 14.99, 11.99, 24.99, 19.99,\n",
+        "            17.99, 14.99, 10.99, 12.99, 19.99,\n",
+        "            \n",
+        "            # Accessories (10)\n",
+        "            12.99, 39.99, 6.99, 5.99, 8.99,\n",
+        "            7.99, 4.99, 9.99, 6.99, 29.99,\n",
+        "            \n",
+        "            # Sports & Fitness (10)\n",
+        "            29.99, 12.99, 14.99, 6.99, 39.99,\n",
+        "            24.99, 8.99, 59.99, 24.99, 29.99,\n",
+        "            \n",
+        "            # Personal Care (10)\n",
+        "            3.99, 11.99, 14.99, 2.49, 12.99,\n",
+        "            8.99, 13.99, 11.99, 7.99, 10.99\n",
         "        ],\n",
         "        \"Stock\": [\n",
-        "            50, 40, 100, 35, 25,\n",
-        "            60, 30, 80, 55, 70,\n",
-        "            20, 45, 60, 90, 100,\n",
-        "            65, 85, 40, 50, 60,\n",
-        "            200, 150, 80, 100, 70,\n",
-        "            60, 30, 40, 35, 25\n",
+        "            # Electronics (20)\n",
+        "            85, 45, 150, 60, 30,\n",
+        "            40, 55, 70, 65, 120,\n",
+        "            200, 50, 35, 48, 180,\n",
+        "            90, 110, 250, 200, 140,\n",
+        "            \n",
+        "            # Furniture (10)\n",
+        "            25, 60, 80, 18, 22,\n",
+        "            50, 75, 15, 65, 35,\n",
+        "            \n",
+        "            # Home Decor (15)\n",
+        "            70, 95, 85, 100, 120,\n",
+        "            45, 60, 90, 30, 40,\n",
+        "            75, 80, 70, 65, 50,\n",
+        "            \n",
+        "            # Home Appliances (10)\n",
+        "            55, 80, 35, 45, 50,\n",
+        "            28, 40, 55, 38, 42,\n",
+        "            \n",
+        "            # Stationery (15)\n",
+        "            300, 180, 120, 400, 250,\n",
+        "            200, 150, 500, 100, 200,\n",
+        "            180, 220, 160, 190, 350,\n",
+        "            \n",
+        "            # Kitchenware (10)\n",
+        "            150, 130, 110, 80, 95,\n",
+        "            100, 70, 140, 105, 90,\n",
+        "            \n",
+        "            # Accessories (10)\n",
+        "            95, 55, 180, 220, 160,\n",
+        "            200, 280, 150, 170, 85,\n",
+        "            \n",
+        "            # Sports & Fitness (10)\n",
+        "            60, 85, 90, 120, 40,\n",
+        "            55, 100, 45, 50, 35,\n",
+        "            \n",
+        "            # Personal Care (10)\n",
+        "            250, 200, 180, 300, 160,\n",
+        "            220, 140, 150, 190, 240\n",
         "        ]\n",
         "    }\n",
         "    return pd.DataFrame(data)\n",
